--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-react": "^7.22.5",
+    "@svgr/cli": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^1.0.7",
