--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -21,6 +21,7 @@
     "no-console": "off",
     "react/button-has-type": "off",
     "react/jsx-no-constructed-context-values": "off",
+    "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
     "react/function-component-definition": [
       "error",
