--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,4 @@
 # call it in React with import.meta.env.VITE_BACKEND_URL
 VITE_BACKEND_URL=http://localhost:5000
+VITE_NAME_COOKIE=YOUR_COOKIE
+VITE_JWT_SECRET=YOUR_JWT
