🔧 update env sample

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,7 +1,19 @@
 APP_PORT=5000
 FRONTEND_URL=http://localhost:3000
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=notroot
-DB_PASSWORD=helloworld
-DB_NAME=mvc_express
+DB_HOST=YOUR_DB_HOST
+DB_PORT=YOUR_DB_PORT
+DB_USER=YOUR_DB_USER
+DB_PASSWORD=YOUR_DB_PASSWORD
+DB_NAME=YOUR_DB_NAME
+
+###
+
+NAME_COOKIE=YOUR_NAME_COOKIE
+JWT_SECRET=YOUR_JWT_SECRET
+
+### jwt expire time (unit = seconde)
+
+### defined on 24h
+EXPIRE_TIME=86400
+ACTIVE_TOKEN=true
+# EXPIRE_TIME=60
