--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test:unit": "echo '----- Checking Backend...' && jest && echo '----- Done!' --DEBUG_PRINT_LIMIT=10000",
+    "test:unit": "echo '----- Checking Backend...' && jest",
     "migrate": "node migrate.js",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
@@ -39,7 +39,12 @@
       }
     ]
   },
+  "transform": {
+    "^.+\\.js$": "babel-jest"
+  },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
