--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.js",
     "test:unit": "echo '----- Checking Backend...' && jest",
     "migrate": "node migrate.js",
+    "migrate:clear": "node migrate.js --clear",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
     "fix": "prettier --write . && eslint --fix --ext .js ."
@@ -17,7 +18,8 @@
   "type": "module",
   "dependencies": {
     "argon2": "^0.30.3",
-    "axios": "^1.3.5",
+    "axios": "^1.5.0",
+    "commander": "^11.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
